--- a/src/pages/demo.mdx
+++ b/src/pages/demo.mdx
@@ -7,6 +7,8 @@ layout: '~/layouts/the-daily-tribune.astro'
 import logo from '~/assets/the-daily-tribune-logo.png';
 import sampleVideo from '~/assets/sample.mp4';
 
+import NewsCard from '~/components/NewsCard.astro';
+
 # Hovedtittel
 Dear Reader,
 
