--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,12 @@
 ---
-layout: '~/layouts/App.astro'
+layout: '~/layouts/basic.astro'
 ---
 
 # Welcome to Elvfjord!
+*placeholder*
+
+Elvfjord is a picturesque village located in the heart of Norway. Surrounded by majestic mountains and serene fjords, it offers a perfect escape from the hustle and bustle of city life. The village is known for its friendly locals, traditional wooden houses, and stunning natural beauty.
+
+Visitors to Elvfjord can enjoy a variety of outdoor activities such as hiking, fishing, and kayaking. The nearby national park provides numerous trails that cater to all levels of hikers, offering breathtaking views of the landscape. In the winter, the area transforms into a winter wonderland, perfect for skiing and snowboarding.
+
+In addition to its natural attractions, Elvfjord also boasts a rich cultural heritage. The local museum showcases artifacts and exhibits that tell the story of the village's history and traditions. Throughout the year, various festivals and events are held, celebrating everything from local cuisine to traditional music and dance.
