--- a/src/pages/the-national-journal/index.mdx
+++ b/src/pages/the-national-journal/index.mdx
@@ -2,8 +2,9 @@
 title: 'The National Journal'
 layout: '~/layouts/the-national-journal.astro'
 ---
-
 import NewsCard from '~/components/NewsCard.astro'
+
+*National news*
 
 <NewsCard 
     title="How hydro plants can help the energy crisis"
