Added AI video on first QR code and AI audio on Town Square

--- a/src/pages/square/index.mdx
+++ b/src/pages/square/index.mdx
@@ -7,17 +7,21 @@ import speech1audio from "~/assets/speech1_audio.mp4"
 import speech2audio from "~/assets/speech2_audio.mp4"
 import speech3audio from "~/assets/speech3_audio.mp4"
 
+
+# Iver Sandvik
 <video controls>
-    <source src={speech1audio} type="video/mp4" />
+    <source src={speech3audio} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
+# Lina Berge
 <video controls>
     <source src={speech2audio} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
+# Henrik Olsen
 <video controls>
-    <source src={speech3audio} type="video/mp4" />
+    <source src={speech1audio} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
