--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,24 +9,27 @@ import speech3video from "~/assets/speech3_video.mp4"
 # Welcome to Elvfjord!
 *placeholder*
 
-Elvfjord is a picturesque village located in the heart of Norway. Surrounded by majestic mountains and serene fjords, it offers a perfect escape from the hustle and bustle of city life. The village is known for its friendly locals, traditional wooden houses, and stunning natural beauty.
+Elvfjord is a beautiful village located in the heart of Norway. Surrounded by majestic mountains and serene fjords, it offers a perfect escape from the hustle and bustle of city life. The village is known for its friendly locals, traditional wooden houses, and stunning natural beauty.
 
-Visitors to Elvfjord can enjoy a variety of outdoor activities such as hiking, fishing, and kayaking. The nearby national park provides numerous trails that cater to all levels of hikers, offering breathtaking views of the landscape. In the winter, the area transforms into a winter wonderland, perfect for skiing and snowboarding.
+Visitors to Elvfjord can enjoy a variety of outdoor activities such as hiking, fishing, and kayaking. The nearby national park provides numerous trails that cater to all levels of hikers, offering breathtaking views of the landscape.
 
-In addition to its natural attractions, Elvfjord also boasts a rich cultural heritage. The local museum showcases artifacts and exhibits that tell the story of the village's history and traditions. Throughout the year, various festivals and events are held, celebrating everything from local cuisine to traditional music and dance.
+This year, discussions are underway about building hydropower stations in the valley near our village. The campaign has officially begun!
 
-Meet the politicians in the town (add names (?)):
+Meet the politicians in the town (scroll down to see them all):
 
+# Henrik Olsen
 <video controls>
     <source src={speech1video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
+# Lina Berge 
 <video controls>
     <source src={speech2video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
+# Iver Sandvik
 <video controls>
     <source src={speech3video} type="video/mp4" />
     Your browser does not support the video tag.
