Added all data for Elvfjord bulletin

--- a/src/pages/elvfjord-bulletin/index.mdx
+++ b/src/pages/elvfjord-bulletin/index.mdx
@@ -5,10 +5,13 @@ layout: '~/layouts/elvfjord-bulletin.astro'
 
 import NewsCard from '~/components/NewsCard.astro'
 
+import hydroPlantAffection from "~/assets/hydroPlantAffections.PNG"
+
 <NewsCard 
-    title="How the new hydro plant will affect jobs"
-    description=""
-    date="24. juni 2023"
+    title="How the New Hydro Plant Will Affect Jobs"
+    image={hydroPlantAffection.src}
+    description="Are our future of work safe?"
+    date="24. November 2023"
     link="How-the-new-hydro-plant-will-affect-jobs"
 />
 
