--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -17,19 +17,19 @@ This year, discussions are underway about building hydropower stations in the va
 
 Meet the politicians in the town (scroll down to see them all):
 
-# Henrik Olsen
+# Henrik Olsen - The Workers Party
 <video controls>
     <source src={speech1video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
-# Lina Berge 
+# Lina Berge - The Naturists
 <video controls>
     <source src={speech2video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
-# Iver Sandvik
+# Iver Sandvik - The Oceanists
 <video controls>
     <source src={speech3video} type="video/mp4" />
     Your browser does not support the video tag.
