--- a/src/pages/the-national-journal/index.mdx
+++ b/src/pages/the-national-journal/index.mdx
@@ -4,25 +4,32 @@ layout: '~/layouts/the-national-journal.astro'
 ---
 import NewsCard from '~/components/NewsCard.astro'
 
+import hydroEnergy from "~/assets/hydroEnergy.PNG"
+import fishNorway from "~/assets/fishNorway.PNG"
+import baerekraft from "~/assets/baerekraft.PNG"
+
 *National news*
 
 <NewsCard 
-    title="How hydro plants can help the energy crisis"
-    description=""
-    date="24. juni 2023"
+    title="Solutions for the energy crisis"
+    description="How Hydro Plants can Help the Energy Crisis"
+    image={hydroEnergy.src}
+    date="4. June 2023"
     link="How-hydro-plants-can-help-the-energy-crisis"
 />
 
 <NewsCard 
     title="How the Fishing Industry Is Impacting the Norwegian Nature"
-    description=""
-    date="24. juni 2023"
+    description="Does the Fishing Industry Impacting the Norwegian Nature?"
+    image={fishNorway.src}
+    date="2. April 2024"
     link="How-the-Fishing-Industry-Is-Impacting-the-Norwegian-Nature"
 />
 
 <NewsCard 
     title="What experts say about the sustainability of the new powerplant"
-    description=""
-    date="24. juni 2023"
+    description="The Trendy Flow of Sustainability"
+    image={baerekraft.src}
+    date="24. January 2024"
     link="What-experts-say-about-the-sustainability-of-the-new-powerplant"
 />
