--- a/src/pages/done.mdx
+++ b/src/pages/done.mdx
@@ -4,4 +4,4 @@ layout: '~/layouts/basic.astro'
 
 # Your done!
 
-Dette er en [lenke](https://forms.gle/jFNNpXCiaKLMRWDJA).
+The election campaign is over and it is time to cast your [vote](https://forms.gle/jFNNpXCiaKLMRWDJA)!
