--- a/src/pages/cafe/index.mdx
+++ b/src/pages/cafe/index.mdx
@@ -6,46 +6,61 @@ layout: '~/layouts/cafe.astro'
 import NewsCard from '~/components/NewsCard.astro'
 import naturalistImg from "~/assets/tribune-naturalists.png"
 
+import FN1 from "~/assets/fn1.jpeg"
+import FN2 from "~/assets/fn2.jpeg"
+import FN3 from "~/assets/fn3.jpeg"
+import FN4 from "~/assets/fn4.jpg"
+import FN5 from "~/assets/fn5.jpg"
+import FN6 from "~/assets/fn6.jpeg"
+
+
+
 # Cafe
 
 <NewsCard 
     title="The dark side of hydro plant’s"
     description="Is Elvfjord’s clean energy dream too good to be true?"
-    date="24. juni 2023"
+    image={FN1}
+    date="July 12th 2023"
     link="The-dark-side-of-hydro-plants"
 />
 
 <NewsCard 
     title="Politician or Party Girl?"
     description="Is Lina Berge’s nightlife overshadowing her political ambitions?"
-    date="24. juni 2023"
+    image={FN1}
+    date="May 3rd 2023"
     link="Politician-or-party-girl"
 />
 
 <NewsCard 
     title="Jobs at Any Cost?"
     description="Henrik Olsen’s push for jobs raises questions: What price will Elvfjord pay?"
-    date="24. juni 2023"
+    image={FN1}
+    date="June 16th 2023"
     link="Jobs-at-Any-Cost"
 />
 
 <NewsCard 
     title="Fishing Industry’s Puppet?"
     description="Is Iver Sandvik truly for the people, or the fishing elite’s voice?"
-    date="24. juni 2023"
+    image={FN1}
+    date="November 19th 2023"
     link="Fishing-Industrys-Puppet"
 />
 
 <NewsCard 
     title="More Activist Than Politician?"
     description="Can Lina Berge’s idealism withstand Elvfjord’s real-world challenges?"
-    date="24. juni 2023"
+    image={FN1}
+    date="February 7th 2023"
     link="More-Activist-Than-Politician"
 />
 
 <NewsCard 
     title="Is Henrik Olsen Really for the People?"
     description="Champion of the working class—or corporate ally in disguise?"
-    date="24. juni 2023"
+    image={FN1}
+    date="October 9th 2023"
     link="Is-Henrik-Olsen-Really-for-the-People"
 />
