English dates on all news

--- a/src/pages/elvfjord-bulletin/index.mdx
+++ b/src/pages/elvfjord-bulletin/index.mdx
@@ -11,7 +11,7 @@ import hydroPlantAffection from "~/assets/hydroPlantAffections.PNG"
     title="How the New Hydro Plant Will Affect Jobs"
     image={hydroPlantAffection.src}
     description="Are our future of work safe?"
-    date="24. November 2023"
+    date="November 25th 2023"
     link="How-the-new-hydro-plant-will-affect-jobs"
 />
 
@@ -21,6 +21,6 @@ import leadersImg from "~/assets/bulletin-leaders.png"
     title="A Look at Elvfjord's Party Leaders"
     image={leadersImg.src}
     description="Three Leaders, Three Visions: The Future of Elvfjord Hangs in the Balance as Election Day Nears."
-    date="24. juni 2023"
+    date="March 6th 2024"
     link="A-Look-at-Elvfjords-Party-Leaders"
 />
