--- a/src/pages/the-daily-tribune/index.mdx
+++ b/src/pages/the-daily-tribune/index.mdx
@@ -11,7 +11,7 @@ import oceanistImg from "~/assets/tribune-oceanist.png"
     title="Are the Oceanists in the pockets of the fishing industry?"
     image={oceanistImg.src}
     description="The Oceanists, a political party in Elvfjord known for defending the local fishing industry and opposing a proposed hydroelectric plant, face scrutiny as residents question whether their stance truly supports the community or simply protects the interests of wealthy figures in the fishing industry."
-    date="24. juni 2023"
+    date="May 5th 2023"
     link="are-the-oceanists-in-the-pockets-of-the-fishing-industry"
 />
 
@@ -21,6 +21,6 @@ import naturalistImg from "~/assets/tribune-naturalists.png"
     title="Who really is the leader of the Naturalists?"
     image={naturalistImg.src}
     description="In Elvfjord’s election season, Lina Berge, a young and passionate leader of the Naturists party, has sparked attention with her strong stance on environmental preservation, opposing a proposed hydroelectric plant."
-    date="24. juni 2023"
+    date="August 2nd 2024"
     link="who-really-is-the-leader-of-the-Naturalists"
 />
