--- a/src/pages/the-national-journal/index.mdx
+++ b/src/pages/the-national-journal/index.mdx
@@ -14,7 +14,7 @@ import baerekraft from "~/assets/baerekraft.PNG"
     title="Solutions for the energy crisis"
     description="How Hydro Plants can Help the Energy Crisis"
     image={hydroEnergy.src}
-    date="4. June 2023"
+    date="June 4th 2023"
     link="How-hydro-plants-can-help-the-energy-crisis"
 />
 
@@ -22,7 +22,7 @@ import baerekraft from "~/assets/baerekraft.PNG"
     title="How the Fishing Industry Is Impacting the Norwegian Nature"
     description="Does the Fishing Industry Impacting the Norwegian Nature?"
     image={fishNorway.src}
-    date="2. April 2024"
+    date="April 2nd 2024"
     link="How-the-Fishing-Industry-Is-Impacting-the-Norwegian-Nature"
 />
 
@@ -30,6 +30,6 @@ import baerekraft from "~/assets/baerekraft.PNG"
     title="What experts say about the sustainability of the new powerplant"
     description="The Trendy Flow of Sustainability"
     image={baerekraft.src}
-    date="24. January 2024"
+    date="January 24th 2024"
     link="What-experts-say-about-the-sustainability-of-the-new-powerplant"
 />
