--- a/src/pages/elvfjord-bulletin/How-the-new-hydro-plant-will-affect-jobs.mdx
+++ b/src/pages/elvfjord-bulletin/How-the-new-hydro-plant-will-affect-jobs.mdx
@@ -3,7 +3,7 @@ title: 'Elvfjord Bulletin'
 layout: '~/layouts/elvfjord-bulletin.astro'
 ---
 
-# How the new hydro plant will affect jobs
+## How the new hydro plant will affect jobs
 As the debate over Elvfjord’s proposed hydroelectric plant intensifies, the question of how it will impact local jobs has become a central issue in the town’s election. According to the Workers Party, the plant represents a major opportunity for job creation, but the Oceanists and local fishery workers fear it could spell disaster for the town’s historic fishing industry.
 
 The Workers Party has positioned the hydro plant as a much-needed economic boost for Elvfjord. Party leader Henrik Olsen says the plant will not only provide hundreds of construction jobs but also create long-term positions in plant maintenance, operations, and energy management. “This plant is a chance to modernize our economy and offer stable, well-paying jobs to the people of Elvfjord,” Olsen explains. “It’s not just about energy—it’s about giving our town a future.”
