--- a/src/pages/the-daily-tribune/are-the-oceanists-in-the-pockets-of-the-fishing-industry.mdx
+++ b/src/pages/the-daily-tribune/are-the-oceanists-in-the-pockets-of-the-fishing-industry.mdx
@@ -3,7 +3,7 @@ title: 'The daily Tribune'
 layout: '~/layouts/the-daily-tribune.astro'
 ---
 
-# Are the Oceanists in the pockets of the fishing industry?
+## Are the Oceanists in the pockets of the fishing industry?
 
 As Elvfjord’s local election campaign heats up, one party seems to be sailing through the waves of controversy—the Oceanists. Known for their fierce defense of the town’s historic fishing industry, the Oceanists have made a name for themselves by opposing the proposed hydroelectric plant, arguing that it threatens the survival of the local salmon population. But as the election drama unfolds, some residents are starting to wonder: Are the Oceanists truly standing up for the community’s interests, or are they simply doing the bidding of the fishing industry?
 
