--- a/src/pages/the-daily-tribune/who-really-is-the-leader-of-the-Naturalists.mdx
+++ b/src/pages/the-daily-tribune/who-really-is-the-leader-of-the-Naturalists.mdx
@@ -3,7 +3,7 @@ title: 'The daily Tribune'
 layout: '~/layouts/the-daily-tribune.astro'
 ---
 
-# Who really is the leader of the Naturalists?
+## Who really is the leader of the Naturalists?
 In the midst of Elvfjord’s heated election season, one party has captured attention with its uncompromising stance on environmental protection: the Naturists. But as their platform gains visibility, questions are surfacing about their leader, Lina Berge. At just 26, she’s the youngest political figure in town, and while her passion is undeniable, many are beginning to wonder if she has the experience needed to navigate the town’s complex political landscape.
 
 Berge’s platform centers around environmental preservation, particularly in opposition to the proposed hydroelectric plant. “We don’t need more energy, and certainly not at the expense of our natural habitat,” says Naturist leader Lina Berge. "The town needs to focus on protecting what we have, not looking for ways to exploit it further.” Her stance has resonated with some, but critics argue her position is overly idealistic and dismissive of the town’s need for economic growth and energy security.
