--- a/src/pages/the-national-journal/How-hydro-plants-can-help-the-energy-crisis.mdx
+++ b/src/pages/the-national-journal/How-hydro-plants-can-help-the-energy-crisis.mdx
@@ -3,7 +3,7 @@ title: 'The National Journal'
 layout: '~/layouts/the-national-journal.astro'
 ---
 
-# How hydro plants can help the energy crisis
+## How hydro plants can help the energy crisis
 The proposed hydroelectric plant in Elvfjord could mark the beginning of Norway's bold journey toward renewable energy independence. As energy demands rise across the country, the Elvfjord project has been positioned as a test case for a new wave of sustainable energy production that could reduce reliance on fossil fuels and secure the nation’s energy future.
 
 According to government estimates, the Elvfjord plant is expected to generate over 100 GWh (gigawatt-hours) of electricity annually, enough to power approximately 15,000 homes. This would save an estimated 50,000 tons of CO2 emissions each year, compared to traditional fossil fuel power generation. The project’s supporters claim that if successful, it could be a model for future hydro projects across Norway, with similar plants capable of reducing the country's carbon emissions by nearly 30% over the next decade.
