--- a/src/pages/the-national-journal/How-the-Fishing-Industry-Is-Impacting-the-Norwegian-Nature.mdx
+++ b/src/pages/the-national-journal/How-the-Fishing-Industry-Is-Impacting-the-Norwegian-Nature.mdx
@@ -3,7 +3,7 @@ title: 'The National Journal'
 layout: '~/layouts/the-national-journal.astro'
 ---
 
-# How the Fishing Industry Is Impacting the Norwegian Nature
+## How the Fishing Industry Is Impacting the Norwegian Nature
 The fishing industry’s intensive practices have left a troubling mark on Norway’s rivers and fjords, disrupting delicate ecosystems that have existed for centuries. Studies from the Norwegian Environmental Research Council (NERC) suggest that large-scale fishing operations frequently scrape the seabed, a process known as bottom trawling, which uproots plant life, destroys habitats, and reduces biodiversity. This practice leaves vast areas of the fjords barren and lifeless, effectively preventing marine plants and animals from reestablishing themselves—a fact often overlooked in debates on environmental sustainability.
 
 The impact on the natural salmon population has also become a significant concern. Salmon rely on healthy river habitats for spawning, but disruptions to the seabed and pollution from fishing waste make it increasingly difficult for young salmon to survive. According to a report from the Scandinavian Institute of Aquatic Life, salmon populations in several Norwegian rivers have declined by nearly 40% in the last decade, with fishing practices cited as a primary factor. These changes not only threaten the survival of wild salmon but also disrupt entire ecosystems that depend on their presence.
