--- a/src/pages/the-national-journal/What-experts-say-about-the-sustainability-of-the-new-powerplant.mdx
+++ b/src/pages/the-national-journal/What-experts-say-about-the-sustainability-of-the-new-powerplant.mdx
@@ -3,7 +3,7 @@ title: 'The National Journal'
 layout: '~/layouts/the-national-journal.astro'
 ---
 
-# What experts say about the sustainability of the new powerplant
+## What experts say about the sustainability of the new powerplant
 As Elvfjord debates the proposed hydroelectric plant, environmental experts are stepping forward with suggestions to ensure the project is safe for the local ecosystem. While the plant has sparked concerns about potential impacts on the town’s river and fjord, experts in sustainable energy believe there are practical, eco-friendly measures that can be implemented to protect Elvfjord’s natural habitat. By balancing the needs of energy production with carefully managed environmental protections, the plant could offer a responsible approach to both power generation and ecosystem preservation.
 
 One of the primary concerns is the impact on local salmon populations, which rely on the river for migration. According to Dr. Erik Johansen, an environmental scientist specializing in aquatic ecosystems, a carefully designed fish passage system could be installed to allow salmon to migrate upstream without interference. “Fish passages are a tried-and-true solution that, when done right, have minimal impact on migratory patterns,” Johansen says. Similar designs have been successful in other Scandinavian countries where hydroelectric power is abundant, showing that it’s possible to mitigate such effects without compromising energy output.
