--- a/src/pages/cafe/index.mdx
+++ b/src/pages/cafe/index.mdx
@@ -20,7 +20,7 @@ import FN6 from "~/assets/fn6.jpeg"
 <NewsCard 
     title="The dark side of hydro plant’s"
     description="Is Elvfjord’s clean energy dream too good to be true?"
-    image={FN1}
+    image={FN1.src}
     date="July 12th 2023"
     link="The-dark-side-of-hydro-plants"
 />
@@ -28,7 +28,7 @@ import FN6 from "~/assets/fn6.jpeg"
 <NewsCard 
     title="Politician or Party Girl?"
     description="Is Lina Berge’s nightlife overshadowing her political ambitions?"
-    image={FN2}
+    image={FN2.src}
     date="May 3rd 2023"
     link="Politician-or-party-girl"
 />
@@ -36,7 +36,7 @@ import FN6 from "~/assets/fn6.jpeg"
 <NewsCard 
     title="Jobs at Any Cost?"
     description="Henrik Olsen’s push for jobs raises questions: What price will Elvfjord pay?"
-    image={FN3}
+    image={FN3.src}
     date="June 16th 2023"
     link="Jobs-at-Any-Cost"
 />
@@ -44,7 +44,7 @@ import FN6 from "~/assets/fn6.jpeg"
 <NewsCard 
     title="Fishing Industry’s Puppet?"
     description="Is Iver Sandvik truly for the people, or the fishing elite’s voice?"
-    image={FN4}
+    image={FN4.src}
     date="November 19th 2023"
     link="Fishing-Industrys-Puppet"
 />
@@ -52,7 +52,7 @@ import FN6 from "~/assets/fn6.jpeg"
 <NewsCard 
     title="More Activist Than Politician?"
     description="Can Lina Berge’s idealism withstand Elvfjord’s real-world challenges?"
-    image={FN5}
+    image={FN5.src}
     date="February 7th 2023"
     link="More-Activist-Than-Politician"
 />
@@ -60,7 +60,7 @@ import FN6 from "~/assets/fn6.jpeg"
 <NewsCard 
     title="Is Henrik Olsen Really for the People?"
     description="Champion of the working class—or corporate ally in disguise?"
-    image={FN6}
+    image={FN6.src}
     date="October 9th 2023"
     link="Is-Henrik-Olsen-Really-for-the-People"
 />
