--- a/src/pages/cafe/Politician-or-party-girl.mdx
+++ b/src/pages/cafe/Politician-or-party-girl.mdx
@@ -3,7 +3,7 @@ title: 'Cafe'
 layout: '~/layouts/cafe.astro'
 ---
 
-# Politician or party girl?
+## Politician or party girl?
 Lina Berge, the young and idealistic leader of Elvfjord’s Green Party, has made waves with her strong stance on environmental issues, but rumors are swirling that her dedication to politics might not be as solid as it seems. Several sources claim to have spotted Berge out at local clubs and bars late into the night, raising questions about whether she’s truly fit to lead a serious political movement.
 
 One unnamed resident said, "I’ve seen her out more than a few times, laughing with friends and dancing. She’s supposed to be focused on saving our environment, but it seems like she’s more interested in partying than policymaking." Although there’s no hard evidence to back these claims, some are wondering if Lina’s nightlife habits are overshadowing her political responsibilities.
