--- a/src/pages/cafe/More-Activist-Than-Politician.mdx
+++ b/src/pages/cafe/More-Activist-Than-Politician.mdx
@@ -3,7 +3,7 @@ title: 'Cafe'
 layout: '~/layouts/cafe.astro'
 ---
 
-# More Activist Than Politician?
+## More Activist Than Politician?
 At just 26, Lina Berge of the Naturists has emerged as the fresh, idealistic face of Elvfjord’s green movement. However, some critics have raised concerns that she’s “more activist than politician” and might be out of her depth in handling the town’s challenges. They worry that her strict environmental stance could mean she lacks a practical approach to balancing economic needs.
 
 Yet, Berge has presented a detailed platform and remains committed to responsible governance, balancing environmental ideals with local needs. Although some continue to question her maturity and readiness, their doubts seem rooted in her youth rather than her policies. Without substantial evidence, the “activist” label remains ungrounded, although it’s a point her opponents may continue to exploit.
