--- a/src/pages/cafe/Is-Henrik-Olsen-Really-for-the-People.mdx
+++ b/src/pages/cafe/Is-Henrik-Olsen-Really-for-the-People.mdx
@@ -3,7 +3,7 @@ title: 'Cafe'
 layout: '~/layouts/cafe.astro'
 ---
 
-# Is Henrik Olsen Really for the People?
+## Is Henrik Olsen Really for the People?
 Henrik Olsen has long positioned himself as Elvfjord’s working-class champion, but a few voices have recently suggested he’s out of touch with everyday residents. While Olsen’s support for projects like the hydro plant is aimed at job creation, critics argue he may be more aligned with corporate interests than community needs.
 
 aligned with corporate interests than community needs.
