--- a/src/pages/elvfjord-bulletin/A-Look-at-Elvfjords-Party-Leaders.mdx
+++ b/src/pages/elvfjord-bulletin/A-Look-at-Elvfjords-Party-Leaders.mdx
@@ -3,16 +3,16 @@ title: 'Elvfjord Bulletin'
 layout: '~/layouts/elvfjord-bulletin.astro'
 ---
 
-# A Look at Elvfjord's Party Leaders
+## A Look at Elvfjord's Party Leaders
 As Elvfjord’s local election approaches, all eyes are on the three party leaders who have defined this year’s campaign season. With the proposed hydroelectric plant at the center of debate, each candidate offers a unique perspective shaped by their backgrounds, experience, and party values. Here’s a closer look at the individuals vying to shape Elvfjord’s future.
 
-## Henrik Olsen – The Workers Party
+### Henrik Olsen – The Workers Party
 Representing the Workers Party, Henrik Olsen is a seasoned politician and a lifelong Elvfjord resident. Known for his straightforward, pragmatic approach, Olsen has built his career on advocating for working-class interests and economic growth. With a background in labor rights, Olsen has a reputation for focusing on job creation and local industry development. His stance on the hydroelectric plant has been clear: he believes it will bring valuable employment opportunities to Elvfjord and ensure the town’s economic resilience. Olsen’s critics, however, argue that his industrial approach risks undermining environmental protection, a concern he continues to address by emphasizing the plant’s potential as a green energy source.
 
-## Iver Sandvik – The Oceanists
+### Iver Sandvik – The Oceanists
 Iver Sandvik, leader of the Oceanists, comes from a family with deep roots in Elvfjord’s fishing industry. A former fisheries manager himself, Sandvik has long been a vocal advocate for the town’s traditional way of life. His stance against the hydroelectric plant has resonated with many who see the fishing industry as the heart of Elvfjord’s culture and economy. Sandvik argues that the plant threatens the local salmon population, which could devastate the livelihoods of fishing families. Though some view him as resistant to change, Sandvik’s supporters praise his dedication to preserving Elvfjord’s heritage and natural resources for future generations.
 
-## Lina Berge – The Naturists
+### Lina Berge – The Naturists
 At 26, Lina Berge of the Naturists is the youngest candidate in the race, bringing a fresh perspective to Elvfjord’s politics. An environmental activist, Berge’s platform is centered on strict environmental preservation, often challenging both the Workers Party and Oceanists on their approaches. She opposes the hydroelectric plant, not only for its impact on the local ecosystem but also because she believes Elvfjord’s focus should be on sustainable practices rather than energy expansion. Critics have questioned her lack of political experience, but Berge remains committed to representing younger voices and advocating for a more environmentally conscious Elvfjord.
 
 As the election draws closer, residents are left to weigh each candidate’s vision and decide which leader aligns best with their vision for Elvfjord’s future.
