--- a/src/pages/square/index.mdx
+++ b/src/pages/square/index.mdx
@@ -7,21 +7,20 @@ import speech1audio from "~/assets/speech1_audio.mp4"
 import speech2audio from "~/assets/speech2_audio.mp4"
 import speech3audio from "~/assets/speech3_audio.mp4"
 
-
-# Iver Sandvik
-<video controls>
+#### Iver Sandvik - The Oceanists
+<video controls style="width: 80px; height: auto;">
     <source src={speech3audio} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
-# Lina Berge
-<video controls>
+#### Lina Berge - The Naturists
+<video controls style="width: 80px; height: auto;">
     <source src={speech2audio} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
-# Henrik Olsen
-<video controls>
+#### Henrik Olsen - The Workers Party
+<video controls style="width: 80px; height: auto;">
     <source src={speech1audio} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
