--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -16,20 +16,20 @@ This year, discussions are underway about building hydropower stations in the va
 
 Meet the politicians in the town (scroll down to see them all):
 
-## Henrik Olsen - The Workers Party
-<video controls style="width: 80px; height: auto;">
+#### Henrik Olsen - The Workers Party
+<video controls style="width: 200px; height: auto;">
     <source src={speech1video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
 #### Lina Berge - The Naturists
-<video controls style="width: 80px; height: auto;">
+<video controls style="width: 200px; height: auto;">
     <source src={speech2video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
 
 #### Iver Sandvik - The Oceanists
-<video controls style="width: 80px; height: auto;">
+<video controls style="width: 200px; height: auto;">
     <source src={speech3video} type="video/mp4" />
     Your browser does not support the video tag.
 </video>
