--- a/src/pages/the-national-journal/index.mdx
+++ b/src/pages/the-national-journal/index.mdx
@@ -15,6 +15,7 @@ import baerekraft from "~/assets/baerekraft.PNG"
     description="How Hydro Plants can Help the Energy Crisis"
     image={hydroEnergy.src}
     date="June 4th 2013"
+    author="Julia"
     link="How-hydro-plants-can-help-the-energy-crisis"
 />
 
