--- a/src/pages/the-national-journal/index.mdx
+++ b/src/pages/the-national-journal/index.mdx
@@ -24,6 +24,7 @@ import baerekraft from "~/assets/baerekraft.PNG"
     description="Does the Fishing Industry Impacting the Norwegian Nature?"
     image={fishNorway.src}
     date="April 2nd 2024"
+    author="Børge Larsen"
     link="How-the-Fishing-Industry-Is-Impacting-the-Norwegian-Nature"
 />
 
@@ -32,5 +33,6 @@ import baerekraft from "~/assets/baerekraft.PNG"
     description="The Trendy Flow of Sustainability"
     image={baerekraft.src}
     date="January 24th 2024"
+    author="Børge Larsen"
     link="What-experts-say-about-the-sustainability-of-the-new-powerplant"
 />
