--- a/src/pages/elvfjord-bulletin/index.mdx
+++ b/src/pages/elvfjord-bulletin/index.mdx
@@ -12,6 +12,7 @@ import hydroPlantAffection from "~/assets/hydroPlantAffections.PNG"
     image={hydroPlantAffection.src}
     description="Are our future of work safe?"
     date="November 25th 2023"
+    author="Karen Roland"
     link="How-the-new-hydro-plant-will-affect-jobs"
 />
 
@@ -22,5 +23,6 @@ import leadersImg from "~/assets/bulletin-leaders.png"
     image={leadersImg.src}
     description="Three Leaders, Three Visions: The Future of Elvfjord Hangs in the Balance as Election Day Nears."
     date="March 6th 2024"
+    author="Mathias Lauvre"
     link="A-Look-at-Elvfjords-Party-Leaders"
 />
